feat(S-056): 三端课消上报弹窗全量实现（前端20 + 后端9 tickets）
前端（T-500~T-519）：
- shared/ClassReportFlowModal 5步流程弹窗（基本信息→课程类型→关联申请→学员状态→反馈）
- 5类反馈组件：JobCoaching/MockInterview/Relation/Midterm/BaseCourse
- 旷课分支（absent跳步骤3+5，rate=null）
- BaseCourseTopicPicker题目选择器（tech必修/behavior规则）
- ScreenshotUpload/ResumeUpload上传组件
- 三端薄壳：mentor/ReportModal、lead-mentor/LeadMentorClassReportFlowModal、assistant/AssistantClassReportFlowModal
- submit链路：a-alert错误展示、提交中...状态、submitting body-class
- api/class-records.ts（+195行）

后端（T-520~T-528）：
- OsgClassReportValidator §5.2 五条规则（reference一致性/学员归属/reference归属/字段权限/旷课校验/基础课必选）
- OsgClassRecordServiceImpl.serializeFeedback() 按courseType路由5类feedback DTO（schemaVersion=1）
- OsgClassReportFileServiceImpl MIME二次校验 + UUID存储（截图/简历）
- 5个feedback DTO（JobCoaching/MockInterview/Relation/Midterm/BaseCourse）
- SQL: screenshot_urls TEXT列（幂等procedure）

修复：communication_test feedback错误路由到MidtermFeedback（应为RelationFeedback）

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>